[package]
name = "gltile"
version = "0.0.1"
authors = ["Dave O <davidobrite@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
euclid = "0.15.1"
glium = "0.16.0"
image = "0.12.3"
lazy_static = "0.2.2"
palette = "0.2.1"
pixset = "0.0.1"

[dev-dependencies]
pixset_derive = "0.0.1"
looper = "0.0.1"
rand = "0.3.15"
