[package]
name = "gltile"
version = "0.0.2"
authors = ["Rustcod Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/gltile"
repository = "https://github.com/rustcod/gltile"
description = """
OpenGL-based tile rendering engine
"""

[dependencies]
glium = "0.16.0"
image = "0.12.3"
lazy_static = "0.2.2"
palette = "0.2.1"
pixset = "0.0.2"

[dev-dependencies]
pixset_derive = "0.0.2"
looper = "0.0.2"
rand = "0.3.15"
